--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "chai-http": "^2.0.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "json2csv": "^3.11.2",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign": "4.1.0"
   },
   "engine": {
     "node": "*",
