--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "cors": "^2.8.4",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "json2csv": "^3.11.2",
